WIP: Custom serialize/deserialize adapter for properties.